add social media

--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ link:
   items:
     rss: /atom.xml
     github: https://github.com/bimagv
-    facebook: https://www.facebook.com/jacksoundsystem
-    twitter:
-    linkedin:
-    instagram: 
-    reddit: 
+    facebook: https://fb.me/jacksoundsystem
+    twitter: https://twitter.com/bimaguava
+    linkedin: https://linkedin.com/in/bimagv
+    instagram: https://instagram.com/bima.s2n
+    reddit: https://reddit.com/bimagv
     weibo: 
     jianshu: 
     zhihu: 
