add a local search new

--- a/_config.yml
+++ b/_config.yml
@@ -212,6 +212,11 @@ mermaid:
 friends:
   叶落阁: http://yelog.org/
 
+##########local search#############
+search:
+  path: search.xml
+  field: post
+
 ##########评论设置#############
 comment:
   on: true
